force-app/main/default/objects/Account/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <label>Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hi</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>