force-app/main/default/objects/Account/fields/is_gold__c.field-meta.xml
<CustomField>
    <fullName>is_gold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is gold</label>
    <type>Checkbox</type>
</CustomField>